@@ -141,6 +141,9 @@ BUGFIXES:
   ZOOKEEPER-2142: JMX ObjectName is incorrect for observers (Edward Ribeiro
   via michim)
 
+  ZOOKEEPER-1853: zkCli.sh can't issue a CREATE command containing
+  spaces in the data (Jun Gong via rgs)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1575. adding .gitattributes to prevent CRLF and LF mismatches for
